# tst_error_code

./: CMakeLists.txt  adapter_errors.cpp  adapter_errors.h  conanfile.py  exception.h  t.cpp  test_adapter_errors.cpp
